# Consistency_Check

./: .gitignore  COPYING.md  README.md  Tableau_new_version.py  Tableau_test.py  bea_main.py  encoder.py  main.py  node.py  old_code_bea.py  pyproject.toml  requirements.txt  stltree.py  test.py
benchmarks/: README.md  avionics_constraints.py  make_ablation_plots.sh  make_compare_plots.sh  paper_benchmarks.py  plot.py  run_bench.py  run_mltl_ablation.sh  run_mltl_comparison.sh  stl_ablation.py  test_formulas.py
benchmarks/data/20250329/: smt-quant_z34.13.4_random.csv  smt-quant_z34.13.4_random0.csv  smt-quant_z34.8_nasa-boeing.csv  smt-quant_z34.8_random.csv  smt-quant_z34.8_random0.csv  tableau_nasa-boeing.csv  tableau_random.csv  tableau_random0.csv
benchmarks/data/20250401/: tableau_nasa-boeing.csv  tableau_random.csv  tableau_random0.csv
benchmarks/data/20250615/: tableau_random0.csv
benchmarks/data/ablation/mltl/20250603-08/: ablation_all_nasa-boeing.csv  ablation_all_random.csv  ablation_all_random0.csv  ablation_no-children-order-optimizations_nasa-boeing.csv  ablation_no-children-order-optimizations_random.csv  ablation_no-children-order-optimizations_random0.csv  ablation_no-early-local-consistency-check_nasa-boeing.csv  (+14 more)
benchmarks/data/latest/: smt-quant_z3_nasa-boeing.csv  tableau_nasa-boeing.csv
benchmarks/formulas/: globally0.stl
src/stl_consistency/: parser.py
stl_consistency/: abstract_syntax_table.py  local_solver.py  node.py  parser.py  smtchecker.py  tableau.py  util.py
tests/: test_parser.py  test_smtchecker.py  test_tableau.py
(+26 files in other folders)
